# EnvSync

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
envsync/: __init__.py
envsync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
envsync/cli/: __init__.py  app.py  discover.py  wizard.py
envsync/core/: __init__.py  drift_detector.py
envsync/models/: __init__.py  types.py
envsync/parsers/: __init__.py  env_parser.py  k8s_parser.py
envsync/utils/: __init__.py  constants.py  hashing.py  reporting.py
examples/: dev.env  prod.env  staging.env
tests/: __init__.py  test_cli_env_file_acceptance.py  test_drift_detector.py  test_env_parser.py  test_k8s_parser.py
